--- a/maintance/rocket.html
+++ b/maintance/rocket.html
@@ -2,29 +2,37 @@
 <html>
 <head> <title> Under-Maintance.webp(102) </title>
 <link rel="icon" type= "image/x-icon" href= "iicon.jpg" /> 
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@600&display=swap" rel="stylesheet">
+
 <link rel= "stylesheet" href="dist/css/bootstrap.css" />
 <link rel="stylesheet" href="new.css" />
-
 </head>
 <body>
-<div class= "container">
-<h2 style="color:white;"> We are Under Maintance </h2>
-</br>
-<h4 style="color:white;">  We are improving our webside.</h4>
-<h4 style="color:white;">  We'all be back on Thurday 18th March 2021</h4>
-<h4 style="color:white;">  With new cool features! </h4>
-<img src=" rocket.png"/>
-</div>
-
-
-
-
-
-
-
-
-
-
-
+    <div class= "container">
+        <div class="row align-items-center">
+            <div class="col-12 mt-5"><p class="moon"></p></div>
+            <div class="col-sm-6">
+                <h2 class="text heading"> We are<br/>Under Maintenance</h2>
+                <p class="text mt-4">
+                    We are improving our webside.<br/>
+                    We'all be back on Thurday 18th March 2021<br/>
+                    With new cool features! 
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <img class="img-fluid" src=" rocket.png" alt=""/>        
+            </div>
+        </div>
+        <!--<div class="timer">
+            <span>10:03</span>
+        </div>
+        -->
+    </div>
 </body>
 </html>
